@@ -1,3 +1,7 @@
+spotpython-0.17.1
+
+- improved get_device function
+
 spotpython-0.17.0
 
 - designs.py and spacefilling.py:
